recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while(y=0){avance(r:Double)
         ^